<resources>
    <string name="app_name">AuthenticatorApp</string>
    <string name="logout">Logout</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_profile">Change Profile</string>
    <string name="thanks">todo</string>
    <string name="you">tOdO</string>
    <string name="hello">hello</string>
    <string name="bye">bye</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="authenticator_app">Authenticator App</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="level1">Level1</string>
    <string name="level2">Level2</string>
    <string name="level3">level3</string>
    <string name="done">Done</string>
    <string name="LEVEL4">Button</string>
    <string name="LEVEL5">Button</string>
    <string name="level4">level4</string>
    <string name="level5">level5</string>
    <string name="test">test</string>
    <string name="language_learning_app">Language Learning App</string>
    <string name="home_page">Home page</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="score">score</string>
    <string name="third_text_view">third_text</string>
    <string name="avtar">avtar</string>
    <string name="first_name">first_name</string>
    <string name="second_text_view">second_text_view</string>
    <string name="english_word">english_word</string>
    <string name="HINDI_WORD">hindi_word</string>
    <string name="telugu_word">telugu_word</string>
    <string name="Introduction">Introduction</string>
    <string name="Relations">Relations</string>
    <string name="Greetings">Greetings</string>
    <string name="Travels">Travels</string>
    <string name="Questions">Questions</string>
    <string name="_1_10">1/10</string>
    <string name="option_1">Option 1</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_2">Option 2</string>
    <string name="_1_que_for_quiz">#1 Que for quiz ?</string>
    <string name="translate_guava_to_hindi">Translate Guava to Hindi</string>
    <string name="choose_syllables_in_correct_order">Choose syllables in correct order:</string>
    <string name="fruits">Fruits</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="test_3">Test 3</string>
    <string name="test_4">Test 4</string>
    <string name="test_5">Test 5</string>
    <string name="test_page">Test page</string>
    <string name="Hindi">TextView</string>
    <string name="English">TextView</string>
    <string name="flips">Flips</string>
    <string name="match">Match</string>
    <string name="grades">Grades</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="test3">Test3</string>
    <string name="_0">0</string>
    <string name="grades_as_per_the_latest_attempt">Grades as per the Latest Attempt</string>
    <string name="visual_representation">Visual Representation</string>
    <string name="visualize">Visualize</string>


</resources>
