<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home1"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:contentDescription="@string/hello"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="39dp"
        android:text="@string/home_page"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="269dp"
        android:text="@string/Introduction" />

    <Button
        android:id="@+id/button17"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="330dp"
        android:text="@string/Relations" />

    <Button
        android:id="@+id/button18"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="265dp"
        android:text="@string/Greetings" />

    <Button
        android:id="@+id/button19"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="192dp"
        android:text="@string/Travels" />

    <Button
        android:id="@+id/button20"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="117dp"
        android:text="@string/Questions" />

</RelativeLayout>