<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/black"
    tools:context=".MainActivity">
    <!-- android:id="@+id/idNestedSV"
     android:layout_width="match_parent"
     android:layout_height="match_parent"


     android:orientation="vertical"> -->
    <!-- second TextView -->

    <!--android:padding="10dp"-->


    <TextView
        android:id="@+id/firstName"
        android:layout_width="171dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="156dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="100dp"
        android:text="@string/first_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/secondTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="200dp"
        android:padding="10dp"
        android:text="@string/second_text_view"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button11"
        android:layout_width="104dp"
        android:layout_height="66dp"
        android:layout_marginStart="300dp"
        android:layout_marginEnd="600dp"
        android:text="@string/done"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="243dp"
        android:layout_height="159dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginBottom="177dp"
        android:contentDescription="@string/avtar"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="185dp"
        android:text="@string/HINDI_WORD"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thirdTextView"
        android:layout_width="164dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="88dp"
        android:text="@string/third_text_view"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="233dp"
        android:text="@string/telugu_word"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="287dp"
        android:text="@string/english_word"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>